--- a/main.css
+++ b/main.css
@@ -4,7 +4,8 @@
 	margin-right: 350px;
 	height: 600px;
 	width: 500px;
-	background-color: green;
+	background-color: black;
+	float: left;
 }
 
 #leftlanes{
