--- a/main.css
+++ b/main.css
@@ -5,15 +5,21 @@ body{
 }
 
 #screen{
-	position: relative;
+	
 }
 
 #board{
 	
 /*	margin-left: 350px;
 	margin-right: 350px;
-*/	height: 100%;
+*/	
+	position:absolute;
+	height: 100%;
 	width: 501px;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 	margin: 0 auto;
 	background-color: black;
 	border:1px solid grey;
