--- a/main.css
+++ b/main.css
@@ -139,7 +139,8 @@ body{
 	position: absolute;
 	top:30;
 	right:10%;
-	z-index: 1;
+	z-index: 1;  
+	/*zindex is used to show that button,because playagian div tag is stretched throught out the page  */
 }
 /*#playagainbutton{
 	display: none;
